# maman11

./: CMakeLists.txt  a.out  ks.asm*  lerning  lerning.c  lerning.h  main  main.c  maman11  maman11.b  maman11.b.c  maman11.b.h  maman11.c  my_program  myprogram  new_work  new_work.c  scratch.mk  scratch_1.mk  text.txt  try
lerning.dSYM/Contents/: Info.plist
lerning.dSYM/Contents/Resources/DWARF/: lerning
main.dSYM/Contents/Resources/DWARF/: main
maman11.b.dSYM/Contents/: Info.plist
maman11.b.dSYM/Contents/Resources/DWARF/: maman11.b
maman11.dSYM/: try.c
maman11.dSYM/Contents/: Info.plist
maman11.dSYM/Contents/Resources/DWARF/: maman11
new_work.dSYM/Contents/: Info.plist
new_work.dSYM/Contents/Resources/DWARF/: new_work
