cmake_minimum_required(VERSION 3.26)
project(untitled2 C)

set(CMAKE_C_STANDARD 90)

add_library(untitled2 library.c
        program.c
        main.c
        cmake-build-debug/maman11.c
        lerning.c
        lerning.h
        maman11.c
        maman11.b.h
        maman11.dSYM/try.c
        new_work.c)


